refactor the mvc subproject

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ subprojects {
         compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
         compile("org.jetbrains.kotlin:kotlin-reflect")
         testCompile('org.springframework.boot:spring-boot-starter-test')
+        testCompile("junit:junit")
     }
 
 
