--- a/mvc/build.gradle
+++ b/mvc/build.gradle
@@ -5,5 +5,7 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile("org.mockito:mockito-core")
 
 }
